# chatchat

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/api/: endpoints.py
app/core/: config.py
app/schemas/: chat.py
app/services/: 1.py  __init__.py  agent_service.py  llm.py  llm_service.py  middleware.py  prompts.py  readme  tools.py
src/: model.py
test/: test_api.py  test_llm.py
