[project]
name = "chatchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.13",
    "ddgs>=9.11.2",
    "deepagents>=0.4.5",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.135.1",
    "gsearch>=1.6.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
    "tavily-python>=0.7.22",
    "uvicorn>=0.41.0",
]
